# FastContext

./: FastContext.py  README.md  pyproject.toml
src/fastcontext/: fastcontext.py
tests/: bzipped_normal_R1.fastq.bz2  bzipped_normal_R2.fastq.bz2  empty_summary_test.htm  nocompression_normal_R1.fastq  nocompression_normal_R2.fastq  nocompression_unusualnames_R1.fq  nocompression_unusualnames_R2.fq  not_a_fastq.txt  standard_test_stats_pe.htm  standard_test_stats_pe.tsv  standard_test_stats_se.htm  standard_test_stats_se.tsv  tt.txt  unit_tests.sh  unreadable_file.fastq  unwriteable_output_file.htm  unwriteable_output_file.tsv
