[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "FastContext"
version = "2022.8.8.1"
authors = [ { name = "Emil Viesná", email="regnveig@yandex.ru" } ]
description = "A tool for identification of adapters and other sequence patterns in the next generation sequencing (NGS) data"
keywords = ["NGS", "adapters", "bioinformatics", "read", "structure"]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.8.10"
dependencies = [
	"biopython >= 1.79",
	"pandas >= 1.2.5",
	"python-Levenshtein >= 0.12.2",
	"tqdm >= 4.61.2"
]
classifiers = [
	"Programming Language :: Python :: 3.8",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
	"Natural Language :: English",
	"Development Status :: 4 - Beta",
	"Environment :: Console"
]

[project.scripts]
FastContext = "fastcontext.fastcontext:main"

[project.urls]
"Homepage" = "https://github.com/regnveig/FastContext"
"Bug Tracker" = "https://github.com/regnveig/FastContext/issues"
